# computercraft

./: .gitignore  .luacheckrc  README.md  prompt.md  prompt.txt
.github/workflows/: computer.yaml  controller.yaml  k8s.yaml  pr.yaml
_deploy_/: cluster-controller.yaml  clusters.yml  computer-rbac.yaml  deployment.yml  gateway-controller.yaml  gateway.yml
computer/assets/: prompt.md
computer/src/: chatbot.lua
controller/: Cargo.toml  Dockerfile
controller/src/: api.rs  c2.rs  lib.rs  reconciler.rs
extra-ca-agent/: build.gradle  settings.gradle
extra-ca-agent/src/main/java/com/example/: UnionTrustManagerAgent.java
k8s/: Cargo.toml
k8s/_docker_/: controller.dockerfile  gateway.dockerfile
k8s/crates/controller/: Cargo.toml  README.md
k8s/crates/controller/src/: api.rs  c2.rs  lib.rs  main.rs  reconciler.rs  reconcilers.rs
k8s/crates/controller/src/reconcilers/: cluster.rs  gateway.rs
k8s/crates/gateway/: Cargo.toml  Rocket.toml  rednet.yaml
k8s/crates/gateway/src/: main.rs
src/: chatbot.lua  discord.lua  envconfig.lua  mistral.lua
