[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4.42"
dashmap = "6.1.0"
garde = { version = "0.22", features = ["derive", "serde"] }
k8s-openapi = { version = "0.26", features = ["schemars", "v1_33"] }
kube = { version = "2", features = ["kube-runtime", "kube-derive", "kube-client", "runtime", "derive", "unstable-runtime"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = "1"
tracing = "0.1"
