[workspace]
resolver = "3"
members = ["controller", "gateway"]

[workspace.dependencies]
anyhow = "1"
chrono = "0.4.42"
dashmap = "6.1.0"
garde = { version = "0.22", features = ["derive", "serde"] }
k8s-openapi = { version = "0.26", features = ["schemars", "v1_33"] }
kube = { version = "2", features = ["kube-runtime", "kube-derive", "kube-client", "runtime", "derive", "unstable-runtime"] }
pin-project = "1.1.10"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
scopeguard = "1.2.0"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.16"
tokio = "1"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
