[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3"
garde = { version = "0.22", features = ["derive", "serde"] }
k8s-openapi = { version = "0.26", features = ["schemars", "v1_33"] }
kcr_gateway_networking_k8s_io = "2.20250917.212048"
kube = { version = "2", features = ["kube-runtime", "kube-derive", "kube-client", "runtime", "derive", "unstable-runtime"] }
pin-project = "1"
rand = "0.9"
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1"
scopeguard = "1.2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
