[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
pin-project.workspace = true
rand.workspace = true
rocket.workspace = true
rocket_ws.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tokio.workspace = true
uuid.workspace = true
